--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,8 +4,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+        body{
+          font-family: "Roboto", sans-serif;
+      }
+      .bg-color-blue{
+          background-color: #0AB6FF;
+      }
+      .fs-2{
+          font-size: 1.09rem!important;
+      }
+      ul.nav li .nav-link {
+          position: relative;
+      }
+      ul.nav li .nav-link::after {
+          content: "";
+          position: absolute;
+          bottom: -5px; /* Ajuste a posição vertical da barra */
+          left: 0;
+          width: 100%;
+          height: 2px; /* Ajuste a altura da barra */
+          background-color: #000000; /* Cor da barra */
+          transform: scaleX(0); /* Inicialmente, a barra está invisível */
+          transform-origin: center;
+          transition: transform 0.2s ease-in-out;
+      }
+      
+      /* Animação da barra ao passar o mouse */
+      ul.nav li .nav-link:hover::after {
+          transform: scaleX(1); /* Quando o mouse passar sobre o link, a barra aparecerá */
+      }
+      ul.nav li .nav-link:hover {
+          color: #000!important;
+      }
+      img {
+          max-width: 100%;
+      }
+      .text-denuncia{
+          color: #fff;
+          font-size: calc(4.325rem + .9vw)!important;
+          font-weight: 500;
+          margin-bottom: 10px;
+          position: relative;
+          text-transform: capitalize;
+      }
+      
+      .footer_part {
+          background-image: url(../img/footer_bg.png);
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          padding: 130px 0px 25px;
+      }
+      @media only screen and (min-width: 459px) and (max-width: 767px)
+      {
+          .text-denuncia {
+              font-size: calc(2.325rem - .9vw)!important;
+          }
+      }
+      .radius-style{
+          
+          border-top-right-radius: 0.375rem;
+          border-bottom-right-radius: 0.375rem;
+      }
+      .use_sasu {
+          position: relative;
+          z-index: 1;
+          position: relative;
+          z-index: 99;
+      }
+      .use_sasu .single_feature_part {
+          padding: 40px 25px 31px;
+          text-align: center;
+          border-radius: 5px;
+          box-shadow: 0px 3px 81px 0px rgba(216, 216, 216, 0.45);
+          -webkit-transition: 0.6s;
+          transition: 0.6s;
+          background-color: #fff;
+      }
+      .feature_part .feature_part_text h2 {
+          font-size: 45px;
+          font-weight: 500;
+          line-height: 1.1;
+          margin-bottom: 21px;
+          position: relative;
+          text-transform: capitalize;
+      }
+      .feature_part .feature_part_text p {
+          margin-bottom: 46px;
+      }
+      .null-mr{
+          margin-right: 0!important;
+      }
+      .banner_part{
+          position: relative;
+      overflow: hidden;
+      background-image: url(../img/banner_bg.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      }
+      .banner_part .banner_text p {
+          font-size: 15px;
+          line-height: 1.8;
+          font-family: "Poppins", sans-serif;
+          color: #fff;
+          margin-bottom: 57px;
+          padding-right: 140px;
+      }
+      .my-auto {
+          margin-top: auto !important;
+          margin-bottom: auto !important;
+      }
+      @media (min-width: 768px){
+          .showcase .showcase-text {
+              padding: 7rem;
+          }
+      }
+      .showcase .showcase-text {
+          padding: 3rem;
+      }
+      .banner_part .banner_text {
+          display: table;
+          width: 100%;
+          height: 1020px;
+      }
+      .banner_part .banner_text .banner_text_iner {
+          display: table-cell;
+          vertical-align: middle;
+      }
+      .banner_part .banner_text h1 {
+          font-size: 55px;
+          text-transform: capitalize;
+          font-weight: 700;
+          margin-bottom: 55px;
+          line-height: 1.18;
+          color: #fff;
+      }
+      @media only screen and (min-width: 1200px) and (max-width: 3640px){
+      .container {
+          max-width: 1210px;
+      }
+      }
+      </style>
 </head>
 <body>
   
