--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -51,7 +51,7 @@
       }
       
       .footer_part {
-          background-image: url(../img/footer_bg.png);
+          background-image: url(/public/img/footer_bg.png);
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover;
