--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -211,7 +211,7 @@
     <section class="showcase">
         <div class="container-fluid p-0">
             <div class="row g-0">
-                <div class="col-lg-6 order-lg-2 learning_img"><img src="../img/PEXELS.jpg"></div>
+                <div class="col-lg-6 order-lg-2 learning_img"><img src="../img/pexels-sora-shimazaki-5668838.jpg"></div>
                 <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                     <h2>Missão</h2>
                     <p class="lead mb-0">Produzir, difundir, apoiar, executar e fomentar projetos e atividades relacionadas ao Compartilhamento, Fiscalização e Gerenciamento de Recursos Públicos, fomentando a pesquisa, o ensino, o desenvolvimento, a extensão, a cultura e inovação de atividades que visem a melhor aplicabilidade destes recursos com qualidade, especialmente voltados para uma educação política de inclusão e sustentabilidade, visando o crescimento e benefício social.</p>
