--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -58,18 +58,13 @@
       }
       
       .footer_part {
-          background-image: url(../img/footer_bg.png);
+          background-image: url(/public/img/footer_bg.png);
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover;
           padding: 130px 0px 25px;
       }
-      @media only screen and (min-width: 459px) and (max-width: 767px)
-      {
-          .text-denuncia {
-              font-size: calc(2.325rem - .9vw)!important;
-          }
-      }
+      
       .radius-style{
           
           border-top-right-radius: 0.375rem;
@@ -153,35 +148,69 @@
       .container {
           max-width: 1210px;
       }
+      
+      
       }
+      @media only screen and (min-width: 459px) and (max-width: 767px)
+      {
+          .text-denuncia {
+              font-size: calc(2.325rem - .9vw)!important;
+          }
+          .navbar{
+        background-color: #0AB6FF;
+      }
+      .banner_part .banner_text {
+    display: table;
+    width: 100%;
+    height: 1200px;
+}
+      
+      }
+      
       </style>
 </head>
 <body>
   
-        <div class="container  ">
-            <header id="header_top"  class="d-flex flex-wrap justify-content-center py-3 mb-2 " style="position: fixed; z-index: 999; width: 100%; top: 0; left: 0;">
-            <div class="col-md-3 mb-2 mb-md-0">
-              
-            </div>
+       
+            <header id="navbarsExample05"  class="navbar-collapse collapse d-flex flex-wrap justify-content-end" style="position: fixed; z-index: 999; width: 100%; top: 0; left: 0;">
+            
       
-            <ul class="nav nav-pills">
-              <li><a href="#" class="nav-link fs-2 text-light">Notícias</a></li>
-              <li><a href="#" class="nav-link fs-2 px-2 text-light">Fale conosco</a></li>
-              <li><a href="/denuncia" class="nav-link fs-2 px-2 text-light">Denuncie aqui o mal uso do recurso público</a></li>
-              <li><a href="#" class="nav-link fs-2 px-2 text-light">Cursos e eventos</a></li>
-            </ul>
+           
+                    
+
+           
+            <nav class="navbar navbar-expand-lg " aria-label="Fifth navbar example">
+                <div class="container-fluid">
+                 
+                  <button class="navbar-toggler collapsed " type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+            
+                  <div class="navbar-collapse collapse" id="navbarsExample05" style="">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a href="#" class="nav-link fs-2  px-2 text-light">Notícias</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link fs-2 px-2 text-light">Fale conosco</a></li>
+                        <li class="nav-item"><a href="/denuncia" class="nav-link fs-2 px-2 text-light">Denuncie aqui o mal uso do recurso público</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link fs-2 px-2 text-light">Cursos e eventos</a></li>
+                      </ul>
+                    
+                  </div>
+                </div>
+              </nav>
+                
+             
       
            
           </header>
     
           
-        </div>
         
-    </div>
+        
+    
 
     <section class="banner_part">
         <div class="container">
-            <a href="/" class="d-flex align-items-center mb-3 mt-1 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" style="position: absolute; z-index: 999; top: -25px;height: 350px;left: 70px;">
+            <a href="/" class="d-flex align-items-center mb-3 mt-1 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" style="position: absolute; z-index: 998; top: -25px;height: 350px;left: 70px;">
                 <img src="img/araponga-logo2.png" alt="" width="90%" height="70%">
               </a>
             <div class="row align-items-center">
@@ -244,13 +273,13 @@
 
     <footer class="footer_part mt-5">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="contact-info col-lg-4">
+            <div class="row">
+                <div class="contact-info col-lg-4 text-center">
                     <p>Endereço: 1234 Rua da Amostra, Cidade de Exemplo, Estado</p>
                     <p>Telefone: (123) 456-7890</p>
                     <p>E-mail: exemplo@email.com</p>
                   </div>
-                  <div class="quick-links col-lg-4">
+                  <div class="quick-links col-lg-4 text-center">
                     <ul >
                       <li ><a href="#">Política de Privacidade</a></li>
                       <li><a href="#">Termos de Uso</a></li>
@@ -259,7 +288,7 @@
                       <li><a href="#">Mapa do Site</a></li>
                     </ul>
                   </div>
-                  <div class="social-media col-lg-4 ">
+                  <div class="social-media col-lg-4 text-center">
                     
                             <a href="#" class="text-align mb-2 d-block"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                 <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
@@ -298,15 +327,18 @@
     
         <script>
             window.addEventListener("scroll", function () {
-                const header = document.getElementById("header_top");
+                
+               
+                    const header = document.getElementById("navbarsExample05");
                 const scrollY = window.scrollY;
-
                 if (scrollY > 0) {
                     header.style.backgroundColor = "#0AB6FF"; // Mudar a cor quando a página é rolada para baixo
                 } else {
                     header.style.backgroundColor = ""; // Restaurar a cor original quando a página está no topo
                 }
+                 
                 });
+            
         </script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
