--- a/src/views/denuncia_page.ejs
+++ b/src/views/denuncia_page.ejs
@@ -258,13 +258,13 @@
 
         <footer class="footer_part mt-5">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="contact-info col-lg-4">
+                <div class="row">
+                    <div class="contact-info col-lg-4 text-center">
                         <p>Endereço: 1234 Rua da Amostra, Cidade de Exemplo, Estado</p>
                         <p>Telefone: (123) 456-7890</p>
                         <p>E-mail: exemplo@email.com</p>
                       </div>
-                      <div class="quick-links col-lg-4">
+                      <div class="quick-links col-lg-4 text-center">
                         <ul >
                           <li ><a href="#">Política de Privacidade</a></li>
                           <li><a href="#">Termos de Uso</a></li>
@@ -273,7 +273,7 @@
                           <li><a href="#">Mapa do Site</a></li>
                         </ul>
                       </div>
-                      <div class="social-media col-lg-4 ">
+                      <div class="social-media col-lg-4 text-center">
                         
                                 <a href="#" class="text-align mb-2 d-block"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                     <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
